--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
             - "80:80"
         volumes:
             - .:/var/www/sfdemo
-            - ./docker/nginx.conf:/etc/nginx/conf.d/nginx.conf
+            - ./nginx/nginx.conf:/etc/nginx/conf.d/nginx.conf
 
     php:
         image: php:7-fpm
